# think-pudding

./: .gitignore  acceptable.sparql  application-ontology.owl  catalog-v001.xml  insert_spek.sh  merged.owl  minimal.owl  ontology.owl  query_isr.sh  readme.md  spek_tp.json  update_isr.sh
example/: causal_pathways_list.json  elim_gap_cp.json  gutter_cp.json  multi_cp.json  upward_cp.json
example/causal_pathways/: elim_gap_one.json
example/class/: result.sparql
example/class_test/: spek.json  upd.sparql
example/predicate/: isr.json  query.sparql  query_isr.sh  result.sparql
python/: pyproject.toml
python/tests/: readme.md  test_cg.py  test_ng.py  test_python.py  test_tp.py
utils/: doquery.sh  doupdate.sh  insert.sh  result.sparql  update.sparql
vignettes/alice/: fuseki.out
vignettes/alice/outputs/: spek_bs.json  spek_cs.json  spek_tp.json
vignettes/testing/: cleanup.sh  fuseki.out  pfp.sh  spek_tp.json
vignettes/testing/outputs1-10/: spek_cs.json  spek_tp.json
