[tool.poetry]
name = "think pudding"
version = "0.1.0"
description = ""
authors = ["pboisver <pboisver@umich.edu>"]

[tool.poetry.dependencies]
python = "^3.10"
rdflib = {git = "https://github.com/rdflib/rdflib", rev = "master"}

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
black = {version = "^22.3.0", allow-prereleases = true}

[tool.pytest.ini_options]
# tooling running pytest will not resolve modules in `src`
testpaths = ["tests"]
pythonpath = ["src"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
